Step 10: docs + quality gate + JVM distributable
Step 10 covers the README, architecture doc, changelog, build
script cleanup, default Integrant config, and structural quality
tests. This commit also adds the missing unit tests that the
quality gate surfaced.

Docs:
- README.md rewritten with real quick-start examples, CLI flag
  reference, architecture summary, and build instructions.
- docs/architecture.md added: component graph, context-map key
  glossary, extension points, single-threaded MVP rationale,
  and network-boundary rules.
- CHANGELOG.md added: release notes, implemented/deferred/known-
  limitation sections.
- AGENT_INSTRUCTIONS.md updated with current verify commands
  and MVP status.

Build:
- build.clj cleaned of vestigial Datalevin JVM opts and manifest
  Add-Opens (Datalevin is out of MVP). Uber build now produces
  a plain JVM jar + launcher script.
- resources/lateralus/config.edn populated with the default
  Integrant config (was empty {}). The CLI --config flag now
  reads it with ig/read-string.
- build.clj gains a 'native' placeholder that throws a documented
  ex-info: GraalVM native-image is a deferred Step 9 stretch;
  use 'uber' for the JVM MVP distributable.

Quality-gate tests (test/kschltz/agent/quality_test.clj):
- every src namespace has a corresponding test namespace
- no source file exceeds 500 LOC
- chain + runtime combined stay under 350 LOC
- no ad-hoc add-*-tool! installer functions
- no http/completion calls outside llm/http.clj
- no kschltz.agent.loop dependency in interceptors.clj

Missing unit tests surfaced by the namespace-parity check:
- test/kschltz/agent/llm/client_test.clj - stub-client echo,
  fallback on empty messages, http-client wrapper existence.
- test/kschltz/agent/memory/protocol_test.clj - MemoryBackend
  contract satisfied by noop backend.
- test/kschltz/agent/memory/noop_backend_test.clj - noop store
  and recall behavior.
- test/kschltz/agent/memory/embedding_test.clj - noop embedder
  returns [0.0] and